# python-project-49

./: Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: even.py  run_games.py  utils.py
brain_games/games/: brain_calc_game.py  brain_even_game.py  brain_gcd_game.py  brain_prime_game.py  brain_progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
